@@ -1969,3 +1969,9 @@ Changes for patch v217
 Changes for patch v218
 
 - Removed DEVFS_FL_AUTO_OWNER flag
+
+- Switched lingering structure field initialiser to ISO C
+
+- Added locking when setting/clearing flags
+
+- Documentation fix in fs/devfs/util.c
